kubernetes/apps/observability/grafana/config/alertmanager-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  namespace: observability
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - alertmanager.aknuk.dev
  rules:
    - backendRefs:
        - name: grafana-stack-alertmanager
          port: 9093
