kubernetes/apps/observability/grafana/config/prometheus-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: observability
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - prometheus.aknuk.dev
  rules:
    - backendRefs:
        - name: grafana-stack-prometheus
          port: 9090
